--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style> -->
 </head>
 
-<body class="bg-dark">
+<body class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-md-6 mx-auto">
